Converter Celsium to Fahrenheit

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 .idea/
 .out/
 /.out/
+/out/production/CS2019-09/aflyer/
+/out/production/CS2019-09/dkolesnik/
+/out/production/CS2019-09/imolyavko2/
+/out/production/CS2019-09/isakalouski/
+/out/production/CS2019-09/META-INF/
+/out/production/CS2019-09/nbogdan/
+/out/production/CS2019-09/rutkevich/
+/out/production/CS2019-09/sshumski/
+/out/production/CS2019-09/svetlanda/
+/src/
